objects/Account.object
<CustomObject>
    <fields>
        <fullName>Ceded_From_ICL__c</fullName>
        <description>This field is used to capture the plan that an account is ceded from (Initial Control Licensee)</description>
        <label>Ceded From (ICL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premera AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>Anthem CA</fullName>
                </value>
                <value>
                    <fullName>Anthem CO</fullName>
                </value>
                <value>
                    <fullName>Anthem CT</fullName>
                </value>
                <value>
                    <fullName>Anthem GA</fullName>
                </value>
                <value>
                    <fullName>Anthem IN</fullName>
                </value>
                <value>
                    <fullName>Anthem KY</fullName>
                </value>
                <value>
                    <fullName>Anthem ME</fullName>
                </value>
                <value>
                    <fullName>Anthem MO</fullName>
                </value>
                <value>
                    <fullName>Anthem NH</fullName>
                </value>
                <value>
                    <fullName>Anthem NV</fullName>
                </value>
                <value>
                    <fullName>Anthem NY</fullName>
                </value>
                <value>
                    <fullName>Anthem OH</fullName>
                </value>
                <value>
                    <fullName>Anthem VA</fullName>
                </value>
                <value>
                    <fullName>Anthem WI</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA BS</fullName>
                </value>
                <value>
                    <fullName>Capital PA</fullName>
                </value>
                <value>
                    <fullName>Carefirst DC</fullName>
                </value>
                <value>
                    <fullName>Carefirst MD</fullName>
                </value>
                <value>
                    <fullName>Carefirst VA</fullName>
                </value>
                <value>
                    <fullName>Highmark DE</fullName>
                </value>
                <value>
                    <fullName>Excellus NY</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>HCSC</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>Highmark PA</fullName>
                </value>
                <value>
                    <fullName>IBC PA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ceded_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is no longer used</description>
        <label>Ceded From</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ceded Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ceded_To_ACL__c</fullName>
        <description>This field is used to capture the plan that an account is ceded to (Alternative Control Licensee)</description>
        <inlineHelpText>Plan that an account is ceded to (Alternative Control Licensee)</inlineHelpText>
        <label>Ceded To (ACL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premera AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>Anthem CA</fullName>
                </value>
                <value>
                    <fullName>Anthem CO</fullName>
                </value>
                <value>
                    <fullName>Anthem CT</fullName>
                </value>
                <value>
                    <fullName>Anthem GA</fullName>
                </value>
                <value>
                    <fullName>Anthem IN</fullName>
                </value>
                <value>
                    <fullName>Anthem KY</fullName>
                </value>
                <value>
                    <fullName>Anthem ME</fullName>
                </value>
                <value>
                    <fullName>Anthem MO</fullName>
                </value>
                <value>
                    <fullName>Anthem NH</fullName>
                </value>
                <value>
                    <fullName>Anthem NV</fullName>
                </value>
                <value>
                    <fullName>Anthem NY</fullName>
                </value>
                <value>
                    <fullName>Anthem OH</fullName>
                </value>
                <value>
                    <fullName>Anthem VA</fullName>
                </value>
                <value>
                    <fullName>Anthem WI</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA BS</fullName>
                </value>
                <value>
                    <fullName>Capital PA</fullName>
                </value>
                <value>
                    <fullName>Carefirst DC</fullName>
                </value>
                <value>
                    <fullName>Carefirst MD</fullName>
                </value>
                <value>
                    <fullName>Carefirst VA</fullName>
                </value>
                <value>
                    <fullName>Highmark DE</fullName>
                </value>
                <value>
                    <fullName>Excellus NY</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>HCSC</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>Highmark PA</fullName>
                </value>
                <value>
                    <fullName>IBC PA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ceded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if an account is ceded from another plan.</description>
        <label>Ceded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Stop_Date__c</fullName>
        <description>This date will be populated when Account is cancelled. This date will equal account cancellation date plus 365 days.</description>
        <label>Claim Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Communication_Resources__c</fullName>
        <description>This field is used to capture the Resources a Group Account uses to communicate with members.</description>
        <label>Client Communication Resources</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Competitors__c</fullName>
        <description>Companies that compete with the Group Account</description>
        <label>Client Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <description>This field is used to capture the cluster number for a Prospect or Group Account.</description>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coalition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the group is part of a coalition.</description>
        <label>Coalition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Financial_Health__c</fullName>
        <description>This field is used to capture the financial health of a Group Account.</description>
        <label>Company Financial Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Strength_and_Opportunity__c</fullName>
        <description>This field is used to capture the Strengths and opportunities for a Competitor or Vendor Account.</description>
        <label>Overall Strength and Opportunity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Weaknesses_and_Threats__c</fullName>
        <description>This field is used to capture the Weaknesses and Threats for a Competitor or Vendor Account.</description>
        <label>Overall Weaknesses and Threats</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ComplexityScoreAccountFields__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field used to hold the complexity score for Account Field components. Should remain hidden.</description>
        <label>ComplexityScoreAccountFields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComplexityScoreBenefitAgreement__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field used to hold the complexity score for Benefit Agreement components. Should remain hidden.</description>
        <label>ComplexityScoreBenefitAgreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComplexityScoreCase__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field used to hold the complexity score for Case components. Should remain hidden.</description>
        <label>ComplexityScoreCase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComplexityScoreCompetitorRelationship__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field used to hold the complexity score for Competitor Relationship components. Should remain hidden.</description>
        <label>ComplexityScoreCompetitorRelationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComplexityScoreContact__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field used to hold the complexity score for Contact components. Should remain hidden.</description>
        <label>ComplexityScoreContact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComplexityScoreContractAdministration__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hidden complexity score field for Contract Administration object</description>
        <label>ComplexityScoreContractAdministration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComplexityScoreGroupSectionCount__c</fullName>
        <label>ComplexityScoreGroupSectionCount</label>
        <summaryFilterItems>
            <field>Group_Section__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Group_Section__c.Group_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Complexity_Score__c</fullName>
        <description>This field is used to capture the relative indicator on how complex an account is to manage.</description>
        <label>Complexity Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connectivity__c</fullName>
        <label>Connectivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test 1</fullName>
                </value>
                <value>
                    <fullName>Test2</fullName>
                </value>
                <value>
                    <fullName>VPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number_Extension__c</fullName>
        <label>Contact Phone Number Extension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title_Name__c</fullName>
        <label>Contact Title Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End__c</fullName>
        <description>This field is used to capture the end date of the Group Account&apos;s contract.</description>
        <label>Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This contact must be related to this Account. The contact will be the designated signer for contracts sent out by contract administration</inlineHelpText>
        <label>Contract Recipient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Group Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cooperative__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the group is part of a cooperative.</description>
        <label>Cooperative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Code__c</fullName>
        <description>5 digit FIPS Format. Numeric Value (value will be derived from County Name) - Needs more research</description>
        <label>FIPS Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <label>County Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <description>This field is used to capture the Credit Rating (e.g., AAA, AA, A) of the Account.</description>
        <label>Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>BB/B</fullName>
                </value>
                <value>
                    <fullName>CCC/CC/C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator for high-profile accounts (current groups or prospects) that are large in size or have some material impact on the plan</description>
        <label>Critical Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Critical_Illness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Prospect Account is interested in Critical Illness Insurance.</description>
        <label>Critical Illness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Risk_Level__c</fullName>
        <description>This field is used to capture the risk level for a Group Account (1 being Renewed and 6 being Cancelled).</description>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Renewed</fullName>
                    <label>1 - Low (Renewed)</label>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                    <label>2 - Medium</label>
                </value>
                <value>
                    <fullName>4 - High</fullName>
                    <label>3 - High</label>
                </value>
                <value>
                    <fullName>5 - In Jeopardy</fullName>
                    <label>4 - In Jeopardy</label>
                </value>
                <value>
                    <fullName>6 - Terminated</fullName>
                    <label>5 - Terminated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Blue_Access_Link__c</fullName>
        <description>This field is used to capture the custom Blue Access link created in the portal for the members.</description>
        <label>Custom Blue Access Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <description>This field is used to capture the “Doing Business As” Name for a Producer or Consultant account as listed in Siebel SFA</description>
        <label>DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Tax_ID__c</fullName>
        <description>This field is used to capture the “Doing Business As” Tax ID for a Producer or Consultant account as listed in Siebel SFA</description>
        <label>DBA Tax ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DENTAL_MULT_CORP_Tier_Indicator__c</fullName>
        <label>DENTAL MULT CORP Tier Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRP__c</fullName>
        <description>This field is used to capture the DRP details for a Producer or Consultant account as listed in Siebel SFA</description>
        <label>DRP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Prospect__c</fullName>
        <description>This field is used to capture the Prospect Date.</description>
        <label>Date of Prospect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Tier_Structure__c</fullName>
        <description>Business need is to show the Tier Number along with the description. (Age Rated vs Composite Rated). Business need is to also view the values associated with age-rated (16) and composite rated (26)</description>
        <label>Dental Tier Structure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Prospect Account is interested in Dental Insurance.</description>
        <label>Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Indirect_Manager_of_Owner__c</fullName>
        <description>This field is to check if the manager or indirect manager of an Account record owner is the logged in user.</description>
        <formula>OR( $User.Id = Owner.ManagerId , $User.Id = Owner.Manager.ManagerId , $User.Id = Owner.Manager.Manager.ManagerId, $User.Id = Owner.Manager.Manager.Manager.ManagerId, $User.Id = Owner.Manager.Manager.Manager.Manager.ManagerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner on My Team?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Market__c</fullName>
        <description>This field is used to capture the Direct Market details for a Producer or Consultant account as listed in Siebel SFA</description>
        <label>Direct Market</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Method__c</fullName>
        <label>Distribution Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Directly To Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>This field is used to capture the district number for a Prospect or Group Account.</description>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
                <value>
                    <fullName>032</fullName>
                </value>
                <value>
                    <fullName>037</fullName>
                </value>
                <value>
                    <fullName>038</fullName>
                </value>
                <value>
                    <fullName>043</fullName>
                </value>
                <value>
                    <fullName>061</fullName>
                </value>
                <value>
                    <fullName>062</fullName>
                </value>
                <value>
                    <fullName>063</fullName>
                </value>
                <value>
                    <fullName>098</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>290</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DollarAmount__c</fullName>
        <label>$ Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Domestic_Partner__c</fullName>
        <label>Domestic Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_client_in_Prospect_State__c</fullName>
        <description>This field calculates the number of days a company is classified as a prospect.</description>
        <label>Prospect Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EIN_Count__c</fullName>
        <label>EIN Count</label>
        <summaryForeignKey>EIN__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <description>This field is used to capture the Group Tax ID Number or Employer Identification Number of the Account.</description>
        <label>EIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>This field is used to capture the Group Account Effective Date or When the Producer was Appointed.</description>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electronic_Attachments__c</fullName>
        <label>Electronic Attachments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Vendor_EDI_Analyst_Email__c</fullName>
        <label>Eligibility Vendor EDI Analyst Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Eligibility_Vendor_EDI_Analyst_Name__c</fullName>
        <label>Eligibility Vendor EDI Analyst Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_Vendor_EDI_Analyst_Phone__c</fullName>
        <label>Eligibility Vendor EDI Analyst Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Eligibility_Vendor_Name__c</fullName>
        <label>Eligibility Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_Members_O65__c</fullName>
        <description>This field is used to capture the number of eligible members over 65 that qualify for Medicare</description>
        <inlineHelpText>Number of eligible members over 65 that qualify for Medicare</inlineHelpText>
        <label>Eligible Members O65</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This field is used to capture the Email address of the producer or consultant account.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Assistance_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Prospect Account is interested in the Employee Assistance Program.</description>
        <label>Employee Assistance Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Demographics__c</fullName>
        <description>This field is used to capture the description of a Prospect or Group Account&apos;s employee demographics.</description>
        <label>Employee Demographics and Medical Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enrollment_Credit_Allowance__c</fullName>
        <description>This field is used to capture the amount of enrollment credits available.</description>
        <label>Enrollment Credit Amount Available</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enrollment_Credits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the sold account has enrollment credits.</description>
        <label>Enrollment Credits?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>